--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ For example, suppose you have a test that passes 99% of the time.
 This can happen when tests are run using randomly generated data,
 such as for modeling or optimization.
 
-```{r example1, eval=F}
+```{r example1, eval=T, error=T}
 set.seed(153)
 library(testthat)
 x <- runif(1)
@@ -52,8 +52,14 @@ expect_true(x < .99)
 This test will usually pass, but could fail occasionally and cause
 problems when submitting to CRAN.
 
-To give the test multiple chances to pass, use the functions
-`ttm` and `ttm_expect_true` from this package as follows.
+To give the test multiple chances to pass, wrap the function
+`ttm` around the code for the tests and tell it how many times to 
+run the tests.
+It will succeed if all the tests are passed on any single iteration.
+In the code for the tests, replace `expect_true` with `ttm_expect_true`
+and `expect_equal` with `ttm_expect_equal`.
+
+Below, we run the same test as above, but give it 3 chances to pass.
 By giving it 3 attempts to pass the test, the probability of failure
 drops from 1% to 0.0001%
 
@@ -66,4 +72,3 @@ ttm(10, {
   ttm_expect_true(x < .99)
 })
 ```
-
